<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Silent Order</string>
    <string name="brand">SILENT ORDER</string>
    <string name="nav_home">Home</string>
    <string name="nav_hub">Hub</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_vault">Vault</string>
    <string name="nav_logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="fab_quick_add">Add item</string>
</resources>
